--- a/week8/LİNEARREGRESSİON.ipynb
+++ b/week8/LİNEARREGRESSİON.ipynb
@@ -13,6 +13,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04c5f85e",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "684abf98-2981-4d7f-b6b3-0cd0c3656d0f",
@@ -941,7 +947,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.undefined"
   }
  },
  "nbformat": 4,
