--- a/week8/MLR.ipynb
+++ b/week8/MLR.ipynb
@@ -20,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(\"/Users/betulsamanci/Downloads/advertising.csv\")"
+    "df=pd.read_csv(\"/Users/betulsamanci/Downloads/advertising.csv\")\n",
+    "print(\"YARRAK\")"
    ]
   },
   {
