--- a/week8/MLR.ipynb
+++ b/week8/MLR.ipynb
@@ -20,8 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(\"/Users/betulsamanci/Downloads/advertising.csv\")\n",
-    "print(\"YARRAK\")"
+    "df=pd.read_csv(\"/Users/betulsamanci/Downloads/advertising.csv\")\n"
    ]
   },
   {
